--- a/app/design/adminhtml/default/default/layout/auction.xml
+++ b/app/design/adminhtml/default/default/layout/auction.xml
@@ -153,7 +153,7 @@
     <adminhtml_sales_order_creditmemo_view>
         <reference name="creditmemo_totals">
             <block type="adminhtml/sales_order_totals_item" name="fee.refunded" template="auction/sales/order/refunded.phtml">
-                <action method="setDisplayArea"><area>footer</area></action>
+                <!--<action method="setDisplayArea"><area>footer</area></action>-->
             </block>
         </reference>
     </adminhtml_sales_order_creditmemo_view>
