--- a/app/design/adminhtml/default/default/template/auction/sales/order/total.phtml
+++ b/app/design/adminhtml/default/default/template/auction/sales/order/total.phtml
@@ -2,7 +2,7 @@
 
 <?php if ((float) $this->getSource()->getFeeAmount()): ?>
     <tr>
-        <td class="label"><?php echo Mage::helper('auction')->__('Fee Auction tem-sa-or-to') ?></td>
+        <td class="label"><?php echo Mage::helper('auction')->__('Fee Auction Product') ?></td>
         <td>
             <?php echo $this->displayPrices($this->getSource()->getBaseFeeAmount(), $this->getSource()->getFeeAmount()); ?>
         </td>
